--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
           id="searchQuery"
           placeholder="Search images..."
           autocomplete="off"
+          required
         />
       </div>
       <button type="submit" class="btn btn-primary mb-2">Искать</button>
