--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
           placeholder="Search images..."
           autocomplete="off"
           required
+          placeholder="Search images..."
         />
       </div>
       <button type="submit" class="btn btn-primary mb-2">Искать</button>
